--- a/style.css
+++ b/style.css
@@ -33,6 +33,11 @@ header {
   background-position: 0cap;
   background-repeat: no-repeat;
   background-size: cover;
+  top:0;
+  left:0;
+  height: 100%;
+  width:100%;
+  z-index: -1;
   
 }
 
